# dim

./: .bashrc  .gitignore  .ndclirc  CONTRIBUTING.md  Dockerfile  Dockerfile-pdnsoutput  LICENSE  QUICKSTART-SETUP.md  QUICKSTART.md  README.md  TUTORIAL.md  VM-SETUP.md  dim_ndcli_test.patch  docker.sh  readme.md  runtest.py
ansible-deployment/: README.md  dim.yml
dim/: .gitattributes  .gitignore  CHANGES  Dockerfile  MANIFEST.in  app.py  manage_db  manage_dim  pdns.sql  pyproject.toml  report  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
dim-bind/: README.md  dim-bind-file-agent  dim-bind-file-agent.conf.example  setup.py
dim-cas/: Dockerfile  login.py  requirements.txt  setup.py
dim-testsuite/: Makefile  README.md  SHOW  dim.cfg  runtest.py
dim-web/: .babelrc  Dockerfile  Jenkinsfile  README.md  cas.wsgi  deploy-local-apache.sh  index.html  package.json  setup.py
dim/dim/: __init__.py  _version.py  allocator.py  autodns3.py  cli.py  commands.py  crypto.py  defaults.py  dns.py  errors.py  ipaddr.py  iptrie.py  jsonrpc.py  ldap_auth.py  ldap_sync.py  manage_db.py  manage_dim.py  messages.py  report.py  rpc.py  rrtype.py  transaction.py  util.py  version.py
dim/dim/models/: __init__.py  dns.py  history.py  ip.py  migrate.py  rights.py  schema.py  util.py
dim/dim/sql/: migrate_1.0_to_2.sql  migrate_10_to_11.sql  migrate_11_to_12.sql  migrate_2_to_3.sql  migrate_3_to_4.sql  migrate_4_to_5.sql  migrate_5_to_6.sql  migrate_6_to_7.sql  migrate_7_to_8.sql  migrate_8_to_9.sql  migrate_9_to_10.sql  rollback_6_to_5.sql  rollback_8_to_7.sql  rollback_9_to_8.sql
dim/doc/: Makefile  administrator.rst  api.rst  conf.py  developer.rst  dimclient.rst  dns.rst  index.rst  internals.rst  ip.rst  jsonrpc.rst  maintenance.rst  user.rst  user_management.rst
dim/doc/_themes/rtd/: layout.html  theme.conf
dim/doc/images/: DNSSEC.graphml
dim/etc/: dim.wsgi  pool_report.template
dim/pdns-output/: build.gradle
dim/pdns-output/gradle/wrapper/: gradle-wrapper.properties
dim/pdns-output/src/main/java/dim/: DatabaseNamedLock.java  NSECParameters.java  OutputThread.java  OutputUpdate.java  PdnsDatabase.java  PdnsOutput.java  Signer.java
dim/pdns-output/src/main/resources/: log4j2.properties
dim/pdns-output/src/test/java/dim/: IncrementalTest.java  PdnsConnection.java  PdnsDatabaseTest.java  TestUtil.java
dim/pdns-output/src/test/resources/: web.de  web.de.ksk.private  web.de.zsk2.private
dim/pdns-output/src/test/resources/text/: create-ds-in-delegation  ent1  ent2  round-robin-ns
dim/tests/: rights_test.py
dimcfg/: dim.cfg  log4j2.properties  pdns-output.properties
dimclient/: .gitignore  README.md  dimclient.py  pyproject.toml  setup.py
dimclient/dimclient/: __init__.py  version.py
docker/: .env  compose.yaml
gmp-rsa/: build.gradle
jdnssec-dnsjava/: Makefile  README.vrsn  build.gradle
jdnssec-tools/: ChangeLog  build.gradle
ndcli/: .gitignore  CHANGES  Dockerfile  HACKING  README.md  ndcli  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
ndcli/bash_completion.d/: ndcli
ndcli/dimcli/: __init__.py  cliparse.py  version.py  zonedelete.py  zoneimport.py
ndcli/doc/: Makefile  changes.rst  conf.py  gendoc.py  index.rst  man.rst
ndcli/tests/: __init__.py  bash_quote.py  cliparse_test.py  dimcli_test.py
pdns-output/: .dockerignore  Dockerfile  README.md  build.gradle  (+3 more)
(+540 files in other folders)
