[project]
name = "dimserver"
version = "5.0.2"
maintainers = [
  { name = "zerimond" },
]
description = "DNS and IP management Python server"
requires-python = ">=3.9"
dependencies=[
    "mysqlclient>=1.4.6",
    "SQLAlchemy~=1.4",
    "ldap3~=2.9",
    "Flask~=2.1",
    "Flask-SQLAlchemy~=2.5",
    "Jinja2~=3.1",
    "dnspython~=2.1,!=2.2.0",
    "requests~=2.27",
    "pycryptodome~=3.14",
    "gunicorn>=21",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "nose~=1.3",
    "nose-ignore-docstring~=0.2",
    "pytest~=7.1",
    "pytest-cov~=3.0",
    "Sphinx~=4.4",
]

[project.urls]
Homepage = "https://github.com/ionos-cloud/dim"
Issues = "https://github.com/ionos-cloud/dim/issues"

[project.scripts]
dim = "dim.cli:cli"

[tool.setuptools.packages.find]
exclude = ["etc", "doc"]

[tool.setuptools]
script-files = ["report", "manage_db", "manage_dim"]

[tool.setuptools.package-data]
dim = ["sql/*.sql"]
