[project]
name = "dimclient"
version = "1.0.5"
maintainers = [
  { name = "zerimond" },
]
description = "DNS and IP management Python library"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ionos-cloud/dim"
Issues = "https://github.com/ionos-cloud/dim/issues"
