[project]
name = "dimclient-cli"
version = "5.0.2"
maintainers = [
  { name = "zerimond" },
]
description = "DNS and IP management Python CLI client"
readme = "README.md"
dependencies = [
  "dimclient",
  "python-dateutil>=1.4.1",
  "dnspython>=1.12.0,!=2.2.0",
]
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "Sphinx~=4.4",
    "hypothesis~=5.6.0",
]

[project.scripts]
ndcli = "dimcli:main"

[project.urls]
Homepage = "https://github.com/ionos-cloud/dim"
Issues = "https://github.com/ionos-cloud/dim/issues"
